--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,19 @@
-server.port = 8443
+# ===============================
+# Server Port
+# ===============================
+server.port=8443
 
-spring.datasource.url=jdbc:mysql://localhost/demo?serverTimezone=UTC
+# ===============================
+# OpenAPI
+# ===============================
+api.swagger-ui.context=
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.disable-swagger-default-url=false
+
+# ===============================
+# Datasource
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=pass
-
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
